--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <h2>Features</h2>
   <ul>
-    <li>Live crypto market tracking</li>
+    <li>Cryptocurrency price monitoring and alerts</li>
     <li>Popup and voice alerts</li>
     <li>Background alerts (PRO+)</li>
   </ul>
@@ -36,3 +36,4 @@
   </ul>
 </body>
 </html>
+
