--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <h2>Features</h2>
   <ul>
-    <li>Cryptocurrency price monitoring and alerts</li>
+    <li>Real-time cryptocurrency price tracking (no trading or transactions)</li>
     <li>Popup and voice alerts</li>
     <li>Background alerts (PRO+)</li>
   </ul>
@@ -36,4 +36,5 @@
   </ul>
 </body>
 </html>
+
 
