--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     CryptoPriceTrends is an Android application that provides real-time
     cryptocurrency price alerts with voice notifications.
   </p>
+  <p>
+    CryptoPriceTrends does not facilitate cryptocurrency trading,
+    buying, or selling. It provides price tracking and alerts only.
+  </p>
+
 
   <h2>Features</h2>
   <ul>
@@ -36,5 +41,6 @@
   </ul>
 </body>
 </html>
+
 
 
