--- a/index.html
+++ b/index.html
@@ -1,46 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>CryptoPriceTrends</title>
 </head>
 <body>
+
   <h1>CryptoPriceTrends</h1>
 
   <p>
     CryptoPriceTrends is an Android application that provides real-time
-    cryptocurrency price alerts with voice notifications.
-  </p>
-  <p>
-    CryptoPriceTrends does not facilitate cryptocurrency trading,
-    buying, or selling. It provides price tracking and alerts only.
+    cryptocurrency market price tracking and alert notifications.
   </p>
 
+  <p>
+    This application is for informational purposes only.
+    It does not support cryptocurrency trading, buying, selling,
+    investment services, or financial advice.
+  </p>
 
   <h2>Features</h2>
   <ul>
-    <li>Real-time cryptocurrency price tracking (no trading or transactions)</li>
-    <li>Popup and voice alerts</li>
-    <li>Background alerts (PRO+)</li>
+    <li>Real-time crypto price monitoring</li>
+    <li>Popup and voice-based price alerts</li>
+    <li>Background alerts for PRO+ users</li>
   </ul>
 
   <h2>Pricing</h2>
   <ul>
     <li>FREE – Limited voice alerts</li>
     <li>PRO – Extended voice alerts</li>
-    <li>PRO+ – Unlimited voice alerts & background alerts</li>
+    <li>PRO+ – Unlimited voice alerts and background alerts</li>
   </ul>
 
   <h2>Contact</h2>
-  <p>Email: support@cryptopricetrends.app</p>
+  <p>
+    Email: <a href="mailto:support@cryptopricetrends.app">
+      support@cryptopricetrends.app
+    </a>
+  </p>
+
+  <hr>
 
   <h2>Policies</h2>
-  <ul>
-    <li><a href="privacy.html">Privacy Policy</a></li>
-    <li><a href="refund.html">Refund & Cancellation Policy</a></li>
-  </ul>
+  <p>
+    <a href="privacy.html">Privacy Policy</a> |
+    <a href="terms.html">Terms & Conditions</a> |
+    <a href="refund.html">Cancellation & Refund Policy</a> |
+    <a href="shipping.html">Shipping Policy</a> |
+    <a href="contact.html">Contact Us</a>
+  </p>
+
 </body>
 </html>
-
-
-
